# agent-hub

./: .dockerignore  .env.example  .gitignore  Agent.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/build-push-incident-triage/: action.yml
.github/actions/tf-apply-hub/: action.yml
.github/actions/tf-apply-rds/: action.yml
.github/actions/tf-apply-root/: action.yml
.github/actions/tf-apply-secrets/: action.yml
.github/actions/tf-apply-vpc/: action.yml
.github/actions/tf-apply-worker/: action.yml
.github/workflows/: backend.yml  ci.yml  deploy.yml  destroy.yml  terraform.yml  worker.yml
agents/incident-triage/: .gitignore  Dockerfile  README.md  pyproject.toml
agents/incident-triage/src/incident_triage/: __init__.py  contexts.py  main.py  scheduling.py  settings.py
agents/incident-triage/src/incident_triage/db/: __init__.py  models.py  session.py
agents/incident-triage/src/incident_triage/graph/: __init__.py  builder.py  state.py
agents/incident-triage/src/incident_triage/graph/nodes/: __init__.py  classify.py  dedup.py  enrich.py  fetch.py  finalize.py  mark_read.py
agents/incident-triage/src/incident_triage/graph/nodes/tools/: __init__.py  slack_tool.py
agents/incident-triage/src/incident_triage/instrumentation/: __init__.py  decorator.py  events.py
agents/incident-triage/src/incident_triage/integrations/: __init__.py  gmail.py  slack.py
agents/incident-triage/src/incident_triage/triggers/: __init__.py  poller.py
backend/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/apis/: __init__.py  agents.py  auth.py  dashboard.py  dependencies.py  integrations_gmail.py  integrations_slack.py  internal.py  jobs.py  router.py  tenants.py  webhooks_gmail.py
backend/core/: database.py  settings.py  sqs.py
backend/db/: models.py
backend/db/migrations/: env.py
backend/domain/: __init__.py  enums.py  exceptions.py
backend/middleware/: __init__.py  error_sanitizer.py
backend/schemas/: __init__.py  agent.py  job.py  sqs_job_envelope.py  tenant.py
backend/services/: __init__.py  agents_service.py  auth_service.py  aws_secrets.py  dashboard_service.py  jobs_service.py  tenants_service.py
docs/: Agent.md  INCIDENT_TRIAGE_AGENT_HANDOFF.md  agent-dashboard-deployment-llm-brief.md  architecture.md  data-flow.md  deployment-and-dashboard-instructions.md  design-decisions.md  explanatory-brief-for-llms.md  next_agent.md  plan.md  prompt.md  response.md  terraform-infra-instructions.md
frontend/: .gitignore
infra/: .gitignore  DEPLOYMENT-CHECKLIST.md  README.md  terraform.tfvars.example
infra/agents/incident-triage/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/backend/: alb.tf  apigateway.tf  data.tf  ecr.tf  ecs.tf  iam.tf  providers.tf  security_groups.tf  variables.tf
infra/ci-oidc/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/hub/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/localstack/: iam.tf  outputs.tf  providers.tf  secrets.tf  sqs.tf  terraform.tfvars.example  variables.tf
infra/modules/: README.md
infra/modules/app-runner/: main.tf  outputs.tf  variables.tf
infra/modules/ecs-worker/: main.tf  outputs.tf  variables.tf
infra/modules/rds/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/modules/sqs/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
infra/rds/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/secrets/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/vpc/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/worker/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/localstack-init/ready.d/: 01-init-sqs.sh
tests/: test_auth_jwt.py  test_job_transitions_compile.py  test_langfuse_iso.py  test_signup_schema.py  test_tenant_slugify.py
worker/: .gitignore  Dockerfile  __init__.py  __main__.py  main.py  pyproject.toml
worker/core/: __init__.py
worker/handlers/: __init__.py  _idempotency.py  base.py  deployment_teardown.py  destroy.py  gmail_history_sync.py  gmail_process_message.py  gmail_watch_renewal.py  integration_rotate.py  langfuse_public_metrics.py  metrics_rollup.py  pause.py  provision.py  registry.py
worker/handlers/aws/: __init__.py  _boto.py  apprunner_adapter.py  client_errors.py  ecr.py  ecs.py  elb.py  secrets_manager.py
worker/messaging/: __init__.py  enqueue.py  metrics_schedule.py  stale_agent_cleanup.py
worker/queue/: __init__.py
worker/sqs_transport/: sqs_receive.py
