[project]
name = "agent-hub-backend"
version = "0.1.0"
description = "Agent hub backend (incremental build)"
requires-python = ">=3.11"
dependencies = [
  "agent-hub-core",
  "fastapi>=0.115.0",
  "google-api-python-client>=2.120",
  "google-auth>=2.28",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
agent-hub-core = { workspace = true }

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apis*", "services*"]
